# hilbert

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: stopping.rs  transform_benchmarks.rs
src/: interleaver.rs  lib.rs  normalize.rs  permutation.rs  point.rs  point_list.rs  transform.rs
src/integration/: handle.rs  hilbert-integration.md  hilbert_model.rs  hilbert_tree.rs  mod.rs  monte_carlo_integrator.rs  stopping_criteria.rs
