[package]
name = "hilbert"
version = "0.1.0"
authors = ["paulchernoch <paul.chernoch@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
spectral = "0.6.0"
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "transform_benchmarks"
harness = false
