[package]
name = "hilbert"
license = "MIT"
version = "0.1.2"
authors = ["paulchernoch <paul.chernoch@yahoo.com>"]
edition = "2018"
description = "Hilbert curve transform and inverse for points having two to thousands of dimensions, using Skilling's algorithm."
readme = "README.md"
keywords = ["Hilbert", "fractal", "curve", "Skilling"]
categories = ["algorithms"]
repository = "https://github.com/paulchernoch/hilbert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
spectral = "0.6.0"
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "transform_benchmarks"
harness = false
